src/styles/ContactUs.css
.contactmain {
  width: 100%;
  height: 100%;
  padding-top: 5%;
  display: flex;
  flex-direction: column;
  gap: 30px;
  /* margin: 50px; */
}

#conbg {
  position: absolute;
  z-index: -1;
  width: 100%;
  height: 50vh;
  /* margin: -100px !important; */
}

.contactsec1 {
  display: flex;
  flex-direction: column;
  gap: 10px;
  margin-bottom: 20px;
}

.contactbutton {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 150px;
  padding: 10px 20px;
  border-radius: 10px;
  border: 1px solid white;
}

p {
  margin-bottom: 0px;
}

.detail-head {
  font-size: 50px;
  font-weight: 800;
}

.contactpara {
  font-weight: 900;
  font-size: 40px;
  line-height: normal;
}

.contact-card {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  padding: 20px 0px;

}

.contact1 {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  border: 1px solid white;
  border-radius: 10px;
  padding: 25px 50px;
  width: 32.33%;
  height: 100%;
  min-height: 500px;
  gap: 20px;
}

.cuhead {
  font-size: 24px;
  font-weight: 700;
  color: white;
}

.detail-head {
  font-size: 25px;
  line-height: 55px;
}

.contact-no {
  padding: 10px;
  display: flex;
  flex-direction: column;
  gap: 20px;
}

.contact-number {
  text-decoration: none;
  color: aliceblue;
}

.contact-number {
  position: relative;
  width: 100%;
  height: 40px;
  background-color: #000;
  display: flex;
  align-items: center;
  color: white;
  flex-direction: column;
  justify-content: center;
  border: none;
  padding: 12px;
  gap: 12px;
  border-radius: 8px;
  cursor: pointer;
}


.contact-number::before {
  content: '';
  position: absolute;
  inset: 0;
  left: -5px;
  margin: auto;
  width: 158px;
  height: 48px;
  border-radius: 10px;
  background: linear-gradient(-45deg, #ff821c 0%, #ffe640 100%);
  z-index: -10;
  pointer-events: none;
  transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
}

.contact-number::after {
  content: "";
  z-index: -1;
  position: absolute;
  inset: 0;
  background: linear-gradient(-45deg, #ff821c 0%, #ffe640 100%);
  transform: translate3d(0, 0, 0) scale(0.95);
  filter: blur(20px);
}

.contact-number:hover::after {
  filter: blur(30px);
}

.contact-number:hover::before {
  transform: scale(1.1);
}

.contact-number:active::before {
  scale: 0.7;
}


/* EMAILS */
.contact-email {
  text-decoration: none;
  color: aliceblue;
}

.contact-email {
  position: relative;
  width: 100%;
  height: 40px;
  background-color: #000;
  display: flex;
  align-items: center;
  color: white;
  flex-direction: column;
  justify-content: center;
  border: none;
  padding: 12px;
  gap: 12px;
  border-radius: 8px;
  cursor: pointer;
}


.contact-email::before {
  content: '';
  position: absolute;
  inset: 0;
  left: -7px;
  margin: auto;
  width: 238px;
  height: 48px;
  border-radius: 10px;
  background: linear-gradient(-45deg, #ff821c 0%, #ffe640 100%);
  z-index: -10;
  pointer-events: none;
  transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
}

.contact-email::after {
  content: "";
  z-index: -1;
  position: absolute;
  inset: 0;
  background: linear-gradient(-45deg, #ff821c 0%, #ffe640 100%);
  transform: translate3d(0, 0, 0) scale(0.95);
  filter: blur(20px);
}

.contact-email:hover::after {
  filter: blur(30px);
}

.contact-email:hover::before {
  transform: scale(1.1);
}

.contact-email:active::before {
  scale: 0.7;
}

/* CONTACT3 */


.contact-number3 {
  text-decoration: none;
  color: aliceblue;
}

.contact-number3 {
  position: relative;
  width: 100%;
  height: 100%;
  background-color: #000;
  display: flex;
  align-items: center;
  color: white;
  flex-direction: column;
  justify-content: center;
  border: none;
  padding: 12px;
  gap: 12px;
  border-radius: 8px;
  cursor: pointer;
}


.contact-number3::before {
  content: '';
  position: absolute;
  inset: 0;
  left: -5px;
  margin: auto;
  width: calc(100% + 10px);
  height: calc(100% + 10px);
  border-radius: 10px;
  background: linear-gradient(-45deg, #ff821c 0%, #ffe640 100%);
  z-index: -10;
  pointer-events: none;
  transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
}

.contact-number3::after {
  content: "";
  z-index: -1;
  position: absolute;
  inset: 0;
  background: linear-gradient(-45deg, #ff821c 0%, #ffe640 100%);
  transform: translate3d(0, 0, 0) scale(0.95);
  filter: blur(20px);
}

.contact-number3:hover::after {
  filter: blur(30px);
}

.contact-number3:hover::before {
  transform: scale(1.1);
}

.contact-number3:active::before {
  scale: 0.7;
}

.si {
  display: flex;

  flex-direction: row;
  /* gap: 10px; */
}

.maincontact {
  display: flex;
  min-height: 70vh;
}

.contact-left {
  display: flex;
  flex-direction: column;
  /* align-items: center; */
  justify-content: center;
  gap: 40px;
  width: 50%;
}

.contact-right {
  /* background-color: red; */
  /* height: 100px; */
  width: 50%;
}


/* // here is the form */


h1 {
  font-size: 24px;
  /* Adjust font weight, color, and margin as needed */
}

#contact-form {
  width: 100%;

  display: flex;
  flex-direction: column;
  gap: 20px;

  margin: auto;

  padding: 20px;

  border-radius: 10px;

}

.form-group {
  margin-bottom: 15px;
  display: flex;

  /* Add spacing between form groups */
}

label {
  display: block;
  font-weight: bold;
  margin-bottom: 5px;
}

input[type="text"],
input[type="email"],
input[type="tel"] {
  width: 45%;
  padding: 10px;

  /* border: 1px solid #ccc; */
  border-radius: 12px;
  font-size: 16px;
  border: none;
  /* Adjust font family, color, and spacing as needed */
}

textarea {
  width: 100%;
  padding: 10px;
  /* border: 1px solid #ccc; */
  border-radius: 12px;
  font-size: 16px;
  border: none;
  /* Adjust font family, color, and spacing as needed */
}

textarea {
  height: 150px;
  /* Adjust height as needed */
}

button[type="submit"] {
  background-color: #222227;
  color: white;
  padding: 10px 20px;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  align-self: center;
  width: fit-content;
}

input {
  width: 60%;
}

input,
textarea {
  background-color: #222227;
  /* border: 0.5px solid rgb(82, 81, 81); */
}

form {
  background-color: #0F0F0F;
  border: 1px solid #424242;
}

#inputs {
  display: flex;
  flex-wrap: wrap;
  gap: 20px;
  justify-content: space-between;
  /* margin-bottom: 20px; */
}

@media (max-width:1000px) {
  .contact-card {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    padding: 20px 0px;
    gap: 20px;
  }

  .contact1 {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    border: 1px solid white;
    border-radius: 10px;
    padding: 25px 50px;
    width: 72.33%;
    height: 100%;
    min-height: 400px;
    gap: 20px;
  }
}

@media (max-width:768px) {

  .maincontact {
    display: flex;
    flex-direction: column;
    /* align-items: center; */
    min-height: 100vh;
    gap: 40px;
    /* width: 100vw; */
  }

  .contact-left {
    display: flex;
    flex-direction: column;
    /* align-items: center; */
    justify-content: center;
    gap: 40px;
    width: 100%;
  }

  .contact-right {
    /* display: flex; */
    height: fit-content;
    width: fit-content;
    align-self: center;
  }

  #contact-form {
    width: 80vw;

  }

  input[type="text"],
  input[type="email"],
  input[type="tel"] {
    width: 85%;
    padding: 10px;

    /* border: 1px solid #ccc; */
    border-radius: 12px;
    font-size: 16px;
    border: none;
    /* Adjust font family, color, and spacing as needed */
  }

  textarea {
    width: 85%;
    justify-content: center;
  }

  #inputs {
    display: flex;
    /* flex-wrap: wrap; */
    flex-direction: column;
    gap: 20px;
    /* justify-content:center; */
    align-items: center;
    /* margin-bottom: 20px; */
  }

}

